--- a/consoles.html
+++ b/consoles.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>M&M's Kart Racing - RB Games</title>
+    <title>Consoles - RB Games</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/RB Games Favicon.png" />
     <!-- Bootstrap icons-->
@@ -49,36 +49,18 @@
             </div>
         </div>
     </nav>
-    <!-- Product section-->
-    <section class="py-5">
+    <!-- Header-->
+    <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
-            <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="assets/M&M's Kart Racing 600px.png" alt="M&M's Kart Racing Cover Art" /></div>
-                <div class="col-md-6">
-                    <div class="small mb-1">SKU: BST-468</div>
-                    <h1 class="display-5 fw-bolder">M&M's Kart Racing</h1>
-                    <div class="fs-5 mb-5">
-                        <span class="text-muted text-decoration-line-through">$20.00</span>
-                                $4.95
-                    </div>
-                    <p class="lead">M&M's Kart Racing (stylized as m&m's® KART RACING) is a racing video game for the Nintendo DS and Wii, based on the M&M's license and developed by Frontline Studios in co-production with Calaris Studios. It is the 5th of the 7 M&M's video games. The game allows to play one of M&M's characters in 15 race environments. The game was widespread panned upon release and has been cited to be one of the worst video games of all time.</p>
-                    <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
-                            style="max-width: 3rem" />
-                        <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                            <i class="bi-cart-fill me-1"></i>
-                            Add to cart
-                        </button>
-                    </div>
-                </div>
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">Sales! Sales! Sales!</h1>
+                <p class="lead fw-normal text-white-50 mb-0">At RB Games</p>
             </div>
         </div>
-    </section>
-    <!-- Related items section-->
-    <section class="py-5 bg-light">
+    </header>
+    <!-- Section-->
+    <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
-            <h2 class="fw-bolder mb-4">Related products</h2>
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
@@ -91,7 +73,7 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <a href="fifa21.html">
-                                <h5 class="fw-bolder">FIFA 21</h5>
+                                <h5 class="fw-bolder">Xbox Series X</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -102,7 +84,7 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span>$99.95</span>
+                                $99.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -126,7 +108,7 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <a href="supersmashbros.html">
-                                <h5 class="fw-bolder">Super Smash Bros. Ultimate</h5>
+                                <h5 class="fw-bolder">Xbox Series S</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -139,6 +121,71 @@
                                 <!-- Product price-->
                                 <span class="text-muted text-decoration-line-through">$79.95</span>
                                 $69.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <a href="ps5.html">
+                        <img class="card-img-top" src="assets/PS5 450px.png" alt="PS5 Image" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="ps5.html">
+                                <h5 class="fw-bolder">PS5</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                $749.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <a href="xboxcontroller.html">
+                        <img class="card-img-top" src="assets/Xbox Controller 450px.png" alt="Xbox Controller Image" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="xboxcontroller.html">
+                                <h5 class="fw-bolder">Wii</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                $89.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -162,7 +209,7 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <a href="supermariogalaxy2.html">
-                                <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                <h5 class="fw-bolder">PS2</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -186,19 +233,16 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
-                        </div>
                         <!-- Product image-->
-                        <a href="supermarioodyssey.html">
-                        <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        <a href="ps5.html">
+                        <img class="card-img-top" src="assets/PS5 450px.png" alt="PS5 Image" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="supermarioodyssey.html">
-                                <h5 class="fw-bolder">Super Mario Odyssey</h5>
+                                <a href="ps5.html">
+                                <h5 class="fw-bolder">PS1</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -209,8 +253,75 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$79.95</span>
-                                $69.95
+                                $749.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
+                        <!-- Product image-->
+                        <a href="mmkartracing.html">
+                        <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="mmkartracing.html">
+                                <h5 class="fw-bolder">Xbox</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                </div>
+                                <!-- Product price-->
+                                <span class="text-muted text-decoration-line-through">$20.00</span>
+                                $4.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <a href="supersmashbrosmelee.html">
+                        <img class="card-img-top" src="assets/Super Smash Bros Melee Cover Art 450px.png" alt="Super Smash Bros Melee Cover Art" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="supersmashbrosmelee.html">
+                                <h5 class="fw-bolder">Xbox 360</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                $59.95
                             </div>
                         </div>
                         <!-- Product actions-->
