--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Contact Us - RB Games</title>
+    <title>About Us - RB Games</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/RB Games Favicon.png" />
     <!-- Bootstrap icons-->
@@ -56,33 +56,33 @@
     <header class="bg-dark py-1">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 class="display-6 fw-bolder">Contact Us</h1>
+                <h1 class="display-6 fw-bolder">About Us</h1>
                 <p class="lead fw-normal text-white mb-0">At RB Games we strive to offer Games and Consoles at the lowest prices possible</p>
             </div>
         </div>
     </header>
     <p>
         <div class="container">
-            <h1 class="m-0 text-center text-black">
                 <br>
-                <h1 class="m-0 text-center text-black">Phone Number</h1><br>
-                <h4 class="text-center bi bi-telephone-fill"> <a href="tel:0444565711">0444565711</a></h4><br>
-                <h1 class="m-0 text-center text-black">Social Media</h1><br>
-                <h4 class="text-center bi bi-twitter"> <a href="https://twitter.com">Twitter: @rbgames</a></h4><br>
-                <h4 class="text-center bi bi-instagram"> <a href="https://instagram.com">Instagram: @rbgames</a></h4><br>
-                <h4 class="text-center bi bi-facebook"> <a href="https://facebook.com">Facebook: RB Games</a></h4><br>
-                <h1 class="m-0 text-center text-black">Address</h1><br>
-                <h4 class="text-center bi bi-building"> <a href="https://googlemaps.com">3 North Lakes Drive, North Lakes, QLD</a></h4><br>
-                <h1 class="m-0 text-center text-black">Email</h1><br>
-                <h4 class="text-center bi bi-inbox"> <a href="mailto:support@rbgames.com">support@rbgames.com</a></h4><br>
+                <h1 class="lead fw-normal text-black mb-0">
+                    <h1 class="m-0 text-center text-black">Our Mission</h1><br>
+                        <p class="text-center biggeraboutus">
+                        At RB Games we strive to bring the lowest prices to <b><i>gamers</i></b> around Australia. 
+                        </p>
+                    <br>
+                    <h1 class="m-0 text-center text-black">Our History</h1><br>
+                        <p class="text-center biggeraboutus">
+                        RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games.
+                        </p>
+                </h1>
             </p>
         </div>
     </p>
     <!-- Footer-->
     <br>
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark bottomfooter">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Ryan Baptista 2021</p>
+            <p class="m-0 text-center text-white">Copyright &copy; RB Games 2021</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
