--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,7 @@
                 <h1 class="m-0 text-center text-black">Address</h1><br>
                 <h4 class="text-center bi bi-building"> <a href="https://googlemaps.com">3 North Lakes Drive, North Lakes, QLD</a></h4><br>
                 <h1 class="m-0 text-center text-black">Email</h1><br>
-                <h4 class="text-center bi bi-inbox"> <a href="mailto:admin@rbgames.com">admin@rbgames.com</a></h4><br>
+                <h4 class="text-center bi bi-inbox"> <a href="mailto:support@rbgames.com?subject=I Have a Problem">support@rbgames.com</a></h4><br>
             </p>
         </div>
     </p>
@@ -82,7 +82,7 @@
     <br>
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Ryan Baptista 2021</p>
+            <p class="m-0 text-center text-white">Copyright &copy; RB Games 2021</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
