--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <!-- Footer-->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Ryan Baptista 2021</p>
+            <p class="m-0 text-center text-white">Copyright &copy; RB Games 2021</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
