--- a/aboutus.html
+++ b/aboutus.html
@@ -26,18 +26,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Games</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Consoles</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutus.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="contactus.html">Contact Us</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+                        <!--<a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="index.html">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="consoles.html">Consoles</a></li>
+                            <li><a class="dropdown-item" href="consoles.html">Consoles</a></li>-->
                             <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
@@ -67,12 +67,19 @@
                 <h1 class="lead fw-normal text-black mb-0">
                     <h1 class="m-0 text-center text-black">Our Mission</h1><br>
                         <p class="text-center biggeraboutus">
-                        At RB Games we strive to bring the lowest prices to <b><i>gamers</i></b> around Australia. 
+                        At RB Games we strive to bring the lowest prices to gamers around Australia. 
                         </p>
                     <br>
                     <h1 class="m-0 text-center text-black">Our History</h1><br>
                         <p class="text-center biggeraboutus">
                         RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games.
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         </p>
                 </h1>
             </p>
