--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutus.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="contactus.html">Contact Us</a></li>
                     <li class="nav-item dropdown">
@@ -65,19 +65,14 @@
         <div class="container">
                 <br>
                 <h1 class="lead fw-normal text-black mb-0">
-                    <h1 class="m-0 text-center text-black">Our Mission</h1><br>
+                    <h1 class="m-0 text-center text-black">Our Mission</h1><br><br>
                         <p class="text-center biggeraboutus">
-                        At RB Games we strive to bring the lowest prices to gamers around Australia. 
+                        At RB Games we believe that gaming should be for everyone and games should be available at the lowest prices. We have achieved this by giving our customers fair amounts of money when they trade in their games into our store. We have also achieved this by focusing on actually selling games and gaming systems, instead of selling useless merchandise at our store. We strive to bring the lowest prices to gamers around Australia.  
                         </p>
                     <br>
                     <h1 class="m-0 text-center text-black">Our History</h1><br>
                         <p class="text-center biggeraboutus">
-                        RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games.
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                            RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games. 
                         <br>
                         <br>
                         </p>
