--- a/contactus.html
+++ b/contactus.html
@@ -26,18 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Games</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Consoles</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutus.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="contactus.html">Contact Us</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="index.html">All Products</a></li>
-                            <li>
-                                <hr class="dropdown-divider" />
-                            </li>
-                            <li><a class="dropdown-item" href="consoles.html">Consoles</a></li>
                             <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
