--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
         <div class="container">
                 <br>
                 <h1 class="lead fw-normal text-black mb-0">
-                    <h1 class="m-0 text-center text-black">New Arrivals</h1><br>
+                    <h1 class="m-0 text-center text-black">New Arrivals</h1>
                         <!--<p class="text-center biggeraboutus">
                             At RB Games we believe that gaming should be for everyone and games should be available at the lowest prices. We have achieved this by giving our customers fair amounts of money when they trade in their games into our store. We have also achieved this by focusing on actually selling games and gaming systems, instead of selling useless merchandise at our store. We strive to bring the lowest prices to gamers around Australia.  
                         </p>
@@ -202,6 +202,159 @@
                         </div>
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    </section>
+    <!-- Footer-->
+
+    <p>
+        <div class="container">
+                <br>
+                <h1 class="lead fw-normal text-black mb-0">
+                    <h1 class="m-0 text-center text-black">New Arrivals</h1>
+                </h1>
+            </p>
+        </div>
+    </p>
+
+    <!-- Section-->
+    <section class="py-0">
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <a href="fifa21.html">
+                        <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="fifa21.html">
+                                <h5 class="fw-bolder">FIFA 21</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                $99.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
+                        <!-- Product image-->
+                        <a href="supersmashbros.html">
+                        <img class="card-img-top" src="assets/Smash Bros Cover Art 450px.png" alt="Super Smash Bros Ultimate Cover Art" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="supersmashbros.html">
+                                <h5 class="fw-bolder">Super Smash Bros. Ultimate</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                <span class="text-muted text-decoration-line-through">$79.95</span>
+                                $69.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
+                        <!-- Product image-->
+                        <a href="supermarioodyssey.html">
+                        <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="supermarioodyssey.html">
+                                <h5 class="fw-bolder">Super Mario Odyssey</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                <span class="text-muted text-decoration-line-through">$79.95</span>
+                                $69.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product image-->
+                        <a href="xboxcontroller.html">
+                        <img class="card-img-top" src="assets/Xbox Controller 450px.png" alt="Xbox Controller Image" />
+                        </a>
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="xboxcontroller.html">
+                                <h5 class="fw-bolder">Xbox Wireless Controller</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                $89.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-0 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
                             </div>
                         </div>
