--- a/home.html
+++ b/home.html
@@ -141,19 +141,16 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
-                        </div>
                         <!-- Product image-->
-                        <a href="supermarioodyssey.html">
-                        <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        <a href="ps5.html">
+                        <img class="card-img-top" src="assets/PS5 450px.png" alt="PS5 Image" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="supermarioodyssey.html">
-                                <h5 class="fw-bolder">Super Mario Odyssey</h5>
+                                <a href="ps5.html">
+                                <h5 class="fw-bolder">PS5</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -164,8 +161,7 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$79.95</span>
-                                $69.95
+                                $749.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -212,9 +208,9 @@
 
     <p>
         <div class="container">
-                <br>
                 <h1 class="lead fw-normal text-black mb-0">
-                    <h1 class="m-0 text-center text-black">New Arrivals</h1>
+                    <h1 class="m-0 text-center text-black">On Sale!</h1>
+                    <img src="assets/Banner Ad.png" alt="PS5 Image" />
                 </h1>
             </p>
         </div>
@@ -226,16 +222,19 @@
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
                         <!-- Product image-->
-                        <a href="fifa21.html">
-                        <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
+                        <a href="supermariogalaxy2.html">
+                        <img class="card-img-top" src="assets/Super Mario Galaxy 2 Cover Art 450px.png" alt="Super Mario Galaxy 2 Cover Art" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="fifa21.html">
-                                <h5 class="fw-bolder">FIFA 21</h5>
+                                <a href="supermariogalaxy2.html">
+                                <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -246,7 +245,8 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                $99.95
+                                <span class="text-muted text-decoration-line-through">$49.95</span>
+                                $29.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -330,31 +330,35 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
                         <!-- Product image-->
-                        <a href="xboxcontroller.html">
-                        <img class="card-img-top" src="assets/Xbox Controller 450px.png" alt="Xbox Controller Image" />
+                        <a href="mmkartracing.html">
+                        <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="xboxcontroller.html">
-                                <h5 class="fw-bolder">Xbox Wireless Controller</h5>
+                                <a href="mmkartracing.html">
+                                <h5 class="fw-bolder">M&M's Kart Racing</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
                                 </div>
                                 <!-- Product price-->
-                                $89.95
+                                <span class="text-muted text-decoration-line-through">$20.00</span>
+                                $4.95
                             </div>
                         </div>
                         <!-- Product actions-->
-                        <div class="card-footer p-0 pt-0 border-top-0 bg-transparent">
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
                             </div>
                         </div>
